# routers/router.go
@@ -4,7 +4,6 @@ import (
 	"github.com/gin-gonic/gin"
 
 	_ "github.com/jnhu76/dwz/docs"
-	"github.com/jnhu76/dwz/middleware/jwt"
 	"github.com/jnhu76/dwz/routers/api"
 	v1 "github.com/jnhu76/dwz/routers/api/v1"
 	swaggerfiles "github.com/swaggo/files"
@@ -22,12 +21,13 @@ func InitRouter() *gin.Engine {
 
 	apiv1 := r.Group("/api/v1")
 	apiv1.POST("/add", v1.AddUrl)
+	apiv1.GET("/:shorten", v1.GetUrl)
 	apiv1.DELETE("/:shorten", v1.DeleteUrl)
-	apiv1.Use(jwt.JWT())
-	{
-		// test
-		apiv1.GET("/jwt", v1.GetJwt)
-	}
+	// apiv1.Use(jwt.JWT())
+	// {
+	// 	// test
+	// 	apiv1.GET("/jwt", v1.GetJwt)
+	// }
 
 	return r
 }
